# teach-play

./: .gitignore  LICENSE  LICENSE_EXPLANATION.md  PROJECT_STRUCTURE.md  README.md  TODO.md  __init__.py  requirements.txt
auto_executor/: README.md  requirements.txt
auto_executor/config/: ai.yaml  settings.yaml
auto_executor/core/ai/: agent.py  llm_agent.py  openai_agent.py  rule_agent.py  state_encoder.py
auto_executor/core/playback/: __init__.py  action_resolver.py  executor.py
auto_executor/core/recorder/: hook_keyboard.py  hook_mouse.py  recorder.py  screen_stream.py  ui_tree_extractor.py
auto_executor/core/utils/: logger.py  time.py
auto_executor/core/vision/: locator.py  ocr.py  stream_processor.py  template.py
auto_executor/scripts/: ai_play.py  play.py  record.py
auto_executor/tests/: test_executor.py  test_recorder.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/components/: Layout.tsx  StepEditor.tsx  StepItem.tsx  WindowSelector.tsx
client/src/hooks/: usePlayback.ts  useProjects.ts  useRecorder.ts  useRecordings.ts
client/src/pages/: ProjectDetailPage.tsx  ProjectsPage.tsx  RecordingPage.tsx  StepEditorPage.tsx
client/src/services/: api.ts
client/src/stores/: appStore.ts
client/src/types/: index.ts
data/recordings/: recording_1763906813.json  recording_1763906940.json  recording_1763907170.json
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/ocr/: Dockerfile  server.py
docs/: Draft-PRD.md  TeachPlay-PRD.md
sdk/ai-decision-core/: pyproject.toml  setup.py
sdk/ai-decision-core/ai_decision/: __init__.py  engine.py  models.py  prompts.py
sdk/ocr-adapter/: pyproject.toml  setup.py
sdk/ocr-adapter/ocr_adapter/: __init__.py  base.py  llm.py  paddle.py
sdk/playback-sdk/: pyproject.toml  setup.py
sdk/playback-sdk/playback/: __init__.py  locator.py  models.py  player.py  simulator.py
sdk/recorder-sdk/: pyproject.toml  setup.py
sdk/recorder-sdk/recorder/: __init__.py  capture.py  listener.py  models.py  recorder.py
services/: Dockerfile  requirements.txt
services/app/: __init__.py  main.py
services/app/api/: __init__.py  files.py  playback.py  projects.py  recorder.py  recordings.py
services/app/core/: __init__.py  config.py  database.py  minio_client.py
services/app/db/: __init__.py  models.py
services/app/models/: __init__.py  common.py  file.py  project.py  recording.py
services/app/services/: __init__.py  file_service.py  playback_service.py  project_service.py  recorder_service.py  recording_service.py
services/data/: app.db
